[css-grid] Percentage height on replaced item with scrollbar https://bugs.webkit.org/show_bug.cgi?id=191462

Patch by Ziran Sun <zsun@igalia.com> on 2020-11-11
Reviewed by Manuel Rego Casasnovas.

This CL is to subtract scrollbar in computeReplacedLogicalHeightUsing().
In RenderBox::computeReplacedLogicalHeightUsing() we should also subtract
scrollbarLogicalHeight() when calculating stretchHeight. Without this subtraction,
it caused issues to resolve the percentage heights on grid item replaced children,
if the grid item has a scrollbar.

It ports the changes from the following patch at Chromium:
https://bugs.chromium.org/p/chromium/issues/detail?id=837141
Test files were already ported in WPT at
https://github.com/web-platform-tests/wpt/commit/538eedafb15733c6113b44998170a6bbdae7518b

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeReplacedLogicalHeightUsing const):

Canonical link: https://commits.webkit.org/231496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269717 268f45cc-cd09-0410-ab3c-d52691b4dbfc